--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>[source path] flash</name>
+			<type>2</type>
+			<locationURI>OPENZOOM/src/main/flash</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
