Add as3flickrlib submodule.

--- a/.project
+++ b/.project
@@ -16,7 +16,7 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>[source path] OpenZoom SDK</name>
+			<name>[source path] src</name>
 			<type>2</type>
 			<locationURI>OPENZOOM_HOME/src</locationURI>
 		</link>
